fixed thumbnail spacing

--- a/splashpage.css
+++ b/splashpage.css
@@ -37,11 +37,11 @@
     float:left;
 }
 
-#back img{
+#back>img{
     height:4em;
 }
 
-#back p{
+#back>p{
     margin:-5% 0% 0% 0%;
     width:3em;
 }
@@ -61,9 +61,9 @@
 
 .thumbnail{
     position:absolute;
-    margin:1% 15% 15% 1%;
-    /*width:45%;*/
-    display:inline-block;
+    width:40%;
+    height:40%;
+    display:block;
     text-align:center;
     clear:both;
 }
@@ -77,7 +77,7 @@
 }
 
 .thumbnail.left{
-    margin-left:10%;
+    margin-left:5%;
 }
 
 .thumbnail.right{
@@ -85,32 +85,12 @@
 }
 
 
-/*
-#casestudies{
-    top:10em
-}
-
-#planning{
-    float:left;
-    top:-10em
-}
-
-#risk{
-    float:right;
-    top:-10em
-}
-
-#networks{
-    float:right;
-    top:-30em
-}
-*/
-
 .thumbnail img{
-    position:relative;
-    display:inline;
-    width:300px;
-    height:300px;
+    position:absolute;
+    display:block;
+    width:100%;
+    height:100%;
+
 }
 
 img:hover{
